--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 </div>
 
 <body>
-  <button type="button" id="createNew" onclick = "location.href = '/create';">Enter a game</button> 
+  <button type="button" id="createNew" onclick = "location.href = '/create_game';">Enter a game</button> 
   <button type="button" id="createNewTeam" onclick = "location.href = '/create_team';">Create a Team</button> 
 
 
