Third Schema, Challenge an opponent

--- a/views/create_game.handlebars
+++ b/views/create_game.handlebars
@@ -16,6 +16,6 @@
             <label>Winner:</label>
             <input type="text" name="Winner" size="50" placeholder="Winner ">
         </div> 
-        <button type="submit">Create new game </button>
+        <button type="submit">Create New Game Summary </button>
     </form>
 </article>
