--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,8 +18,9 @@
 </div>
 
 <body>
-  <button type="button" id="createNew" onclick = "location.href = '/create_game';">Enter a game</button> 
+  <button type="button" id="createNew" onclick = "location.href = '/create_game';">Enter a Game Summary</button> 
   <button type="button" id="createNewTeam" onclick = "location.href = '/create_team';">Create a Team</button> 
+  <button type="button" id="createNewTeam" onclick = "location.href = '/create_challenge';">Challenge an Opponent</button> 
 
 
 
