5 HandleBars that loads from Database

--- a/views/create_game.handlebars
+++ b/views/create_game.handlebars
@@ -16,6 +16,13 @@
             <label>Winner:</label>
             <input type="text" name="Winner" size="50" placeholder="Winner ">
         </div> 
+
+        <div class="input-field">
+            <label>Summary of the Game:</label>
+            <input type="text" name="Summary" size="50" placeholder="Summary">
+        </div> 
+
+
         <button type="submit">Create New Game Summary </button>
     </form>
 </article>
