--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,10 @@
 </head>
 <div class="nav">
   <div>
-    <a href="/api/gamesPlayedAtRichie"> Games Played at Ritchie</a>
-   <a href="/api/playoffTeams">Playoff Teams</a>
-    <a href="/api/abc">Alphabetical by Team Name</a>
-    <a href="/api/randomGame">Random Game</a>
-    <a href="/api/gamesPlayedAtEpply">Games Played at Epply</a>
+    <a href="/">Game Available</a>
+    <a href="/api/teams"> List of Registered Teams</a>
+   <a href="/api/gameSummary">Game Summarys</a>
+   
   </div>
 </div>
 
