--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,22 +1,19 @@
 {{#if Stats}}
 <h2>Recent Posts in {{Stats}}:</h2> 
 {{else}}
-<h2>Recent Posts:</h2> 
+<h2>Games Available: </h2> 
 {{/if}}
 
 <input id="search" name="search" type="text" placeholder="Search by Team Name">
 
 {{#each data}}
 <article class = "dataEntry">
-	<h1 class = "team"> Team Name: {{this.TeamName}}, Total Wins: {{this.TotalWins}} </h1>
-	<h2 class="score"> Score: {{this.score}} </h2>
-	<h2 class = "location">Location: {{this.location}}, Number of Players: {{this.players}}</h2>
+	<h1 class = "team"> Challenger's Team Name: {{this.HomeTeamName}} </h1>
 	
-	<div class="content">
-	    {{{this.summary}}}
-	</div>
-	<h1 > Stats of Winner: {{Stats }}</h1>
-	<hr>
+    <h1 class = "players"> Number of Player's Needed: {{this.NumberOfPlayers}} </h1>
+   
+    <h1 class = "location"> Number of Player's Needed: {{this.Location}} </h1>
+    <hr>
 </article>
 {{else}}
 
