One delete endpoint and npm model

--- a/views/create_challenge.handlebars
+++ b/views/create_challenge.handlebars
@@ -9,8 +9,11 @@
 </form>
 <br>
 
+<h1>Current Challenges</h1>
+
 <ul id="challengeList">
 {{#each challenges}}
-<li>{{this.HomeTeamName}}: {{this.NumberOfPlayers}}: {{this.Location}}</li>
+<li> Team name: {{this.HomeTeamName}}, Number of Players:  {{this.NumberOfPlayers}}, Location: {{this.Location}}</li>
 {{/each}}
 </ul>
+<h1> You can also view games under Games Available List</h1>
