--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,6 +23,8 @@
 </article>
 {{/each}}
 
+<button type="button" id="createChallenge" onclick = "location.href = '/delete_game';">Accept a Game</button>
+
 <article id="noResults" hidden="hidden">
     <h1>There are No matches</h1>
 </article>
