Last Delete endpoint

--- a/views/delete_game.handlebars
+++ b/views/delete_game.handlebars
@@ -4,7 +4,7 @@
         
         <div class="input-field">
             <label>TeamName:</label>
-            <input type="text" name="TeamName" size="50" placeholder="TeamName...">
+            <input type="text" name="HomeTeamName" size="50" placeholder="TeamName...">
         </div>
        
         <button type="submit">Accept Game </button>
