--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -12,3 +12,5 @@
     <a href="/create_team">Write your team</a>
 </article>
 {{/each}}
+
+<button type="button" id="createChallenge" onclick = "location.href = '/delete_team';">Delete a Team</button>
