--- a/views/create_game.handlebars
+++ b/views/create_game.handlebars
@@ -23,6 +23,6 @@
         </div> 
 
 
-        <button type="submit">Create New Game Summary </button>
+        <button type="submit" class="buttn">Create New Game Summary </button>
     </form>
 </article>
