--- a/views/create_team.handlebars
+++ b/views/create_team.handlebars
@@ -10,6 +10,6 @@
             <label>TotalWins:</label>
             <input type="text" name="TotalWins" size="50" placeholder="TotalWins...">
         </div> 
-        <button type="submit">Create new Team </button>
+        <button type="submit" class="buttn">Create new Team </button>
     </form>
 </article>
