--- a/views/game_summary.handlebars
+++ b/views/game_summary.handlebars
@@ -1,4 +1,4 @@
-<h1> Game Summary's </h1>
+<h1> Game Summarys </h1>
 
 {{#each data}}
 <article>
@@ -12,6 +12,6 @@
 
 <article>
     <h1>There are no teams yet. :(</h1>
-    <a href="/create_team">Write your team</a>
+    <a href="/create_team" class="buttn">Write your team</a>
 </article>
 {{/each}}
