--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -9,8 +9,7 @@
 
 <article>
     <h1>There are no teams yet. :(</h1>
-    <a href="/create_team">Write your team</a>
+    <a href="/create_team" class="buttn">Write your team</a>
 </article>
 {{/each}}
-
 <button type="button" id="createChallenge" onclick = "location.href = '/delete_team';">Delete a Team</button>
