--- a/views/create_game.handlebars
+++ b/views/create_game.handlebars
@@ -3,22 +3,22 @@
     <form method="POST" action="/api/create_game">
         
         <div class="input-field">
-            <label>HomeTeamName:</label>
+            <label id="homeC">Home Team Name:</label>
             <input type="text" name="HomeTeamName" size="50" placeholder="Home Team Name...">
         </div>
 
         <div class="input-field">
-            <label>AwayTeamName:</label>
+            <label id="awayC">Away Team Name:</label>
             <input type="text" name="AwayTeamName" size="50" placeholder="Away Team Name...">
         </div>
 
         <div class="input-field">
-            <label>Winner:</label>
+            <label id="winnerC">Winner:</label>
             <input type="text" name="Winner" size="50" placeholder="Winner ">
         </div> 
 
         <div class="input-field">
-            <label>Summary of the Game:</label>
+            <label id="summaryC">Summary of the Game:</label>
             <input type="text" name="Summary" size="50" placeholder="Summary">
         </div> 
 
