--- a/views/create_team.handlebars
+++ b/views/create_team.handlebars
@@ -3,7 +3,7 @@
     <form method="POST" action="/api/create_team">
         
         <div class="input-field">
-            <label>TeamName:</label>
+            <label id="teamC">TeamName:</label>
             <input type="text" name="TeamName" size="50" placeholder="TeamName...">
         </div>
         <div class="input-field">
