--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,71 @@
 /* Please add your own! */
+.nav{
+	padding: 20px;
+	margin: 0px 0px 10px 0px;
+	text-align: center;
+	background-color: orange;
+}
+.navLink {
+	margin: 50px;
+	font-size: 20px;
+	text-decoration: none;
+	color: black;
+}
+.navLink:hover {
+	color: blue;
+}
+#createNew,#createNewTeam,#createChallenge {
+	color: blue;
+	margin: 20px;
+	padding: 10px;
+	cursor:pointer;
+	border: 2px solid black;
+	background-color: orange;
+
+
+}
+#createNew:hover,#createNewTeam:hover,#createChallenge:hover {
+	color: black;
+	padding: 12px;
+	
+}
+.buttonsNav {
+	margin: 5px;
+	padding: 20px;
+	text-align: center;
+}
+.body{
+	margin: 10px;
+
+}
+body {
+	margin-top: 0!important;
+	margin-left: 0!important;
+	margin-right: 0!important;
+	font-family: monospace;
+}
+.input-field label{
+	font-size: 16px;
+	padding: 20px;
+	margin-bottom: 10px;
+}
+#winnerC{
+	padding-right: 118px;
+}
+#awayC{
+	padding-right: 48px;
+}
+#homeC{
+	padding-right: 46px;
+}
+#teamC{
+	padding-right: 12px;
+}
+.input-field input{
+	margin-left: 40px;
+}
+.input-field {
+	margin-bottom: 30px;
+}
+
+
