--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,27 +6,30 @@
  <!-- <link rel="stylesheet" type="text/css" href="/public/css/main.css"> -->
   <title>Final Project</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+  <link rel="stylesheet" type="text/css" href="../../public/css/main.css">
 </head>
 <div class="nav">
   <div>
-    <a href="/">Game Available</a>
-    <a href="/api/teams"> List of Registered Teams</a>
-    <a href="/api/gameSummary">Game Summarys</a>
-    <a href="/api/description">Description of Project</a>
+    <a href="/" class="navLink">Game Available</a>
+    <a href="/api/teams" class="navLink"> List of Registered Teams</a>
+    <a href="/api/gameSummary" class="navLink">Game Summarys</a>
+    <a href="/api/description" class="navLink">Description of Project</a>
    
   </div>
 </div>
 
 <body>
-  <button type="button" id="createNew" onclick = "location.href = '/create_game';">Enter a Game Summary</button> 
-  <button type="button" id="createNewTeam" onclick = "location.href = '/create_team';">Create a Team</button> 
-  <button type="button" id="createChallenge" onclick = "location.href = '/create_challenge';">Challenge an Opponent</button> 
+  <div class="buttonsNav">
+    <button type="button" id="createNew" onclick = "location.href = '/create_game';">Enter a Game Summary</button> 
+    <button type="button" id="createNewTeam" onclick = "location.href = '/create_team';">Create a Team</button> 
+    <button type="button" id="createChallenge" onclick = "location.href = '/create_challenge';">Challenge an Opponent</button>
+  </div>
 
 
 
-
+<div class="body">
   {{{body}}}
-  
+  </div>
 <script src="/socket.io/socket.io.js"></script>
 
 
