--- a/views/description.handlebars
+++ b/views/description.handlebars
@@ -1,2 +1,4 @@
 <h1> Description </h1>
-<p> This project was made by Eric Wang and William Strasser</p>
+<p> This project was made by Eric Wang and William Strasser for CMSC389k - Introduction to Full-Stack Development with Node.js at the University of Maryland.</p>
+<p> This site is a hub for a basketball league setup where a list of teams, a list of available games, and a list of game results are all visible and can be live updated to keep track of your team! You can use this app to find a team, find a game, or just learn about basketball.</p>
+<p> We are both avid basketball players and coders, so we combined our interests for this project.</p>
